--- a/AvWeatherTool.html
+++ b/AvWeatherTool.html
@@ -10,7 +10,7 @@
 <title>Aviation Weather Tool</title>
 <link rel="shortcut icon" href="Images/IconB.png"/> <!-- Customized with https://malagatravelguide.net/ -->
 <link rel="stylesheet" href="StyleSheet.css" type="text/css"> <!-- CSS style sheet inclusion -->
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans" type="text/css" /> <!-- GOOGLE FONTS-->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css" /> <!-- GOOGLE FONTS-->
 <script src="DataBase.js"></script>
 <script src="UI-Functions.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- included for use on many different screen resolutions -->
