--- a/AvWeatherTool.html
+++ b/AvWeatherTool.html
@@ -9,7 +9,7 @@
 <link rel="shortcut icon" href="Images/IconB.png"/> <!-- Customized with https://malagatravelguide.net/ -->
 <link rel="stylesheet" href="StyleSheet.css" type="text/css"> <!-- CSS style sheet inclusion -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css" /> <!-- GOOGLE FONTS-->
-<script src="DataBase.js"></script>
+<!-- <script src="DataBase.js"></script> -->
 <script src="UI-Functions.js"></script>
 <script src="NOAA_ADDS_TDS_API.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- included for use on many different screen resolutions -->
